--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2533,7 +2533,8 @@ a:hover .archive__item-title {
   }
 }
 .author__name {
-  margin: 0
+  margin: 0;
+  margin-bottom: 10px;
 }
 @media (min-width: 64em) {
   .author__name {
