--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -20,6 +20,15 @@
 
 .archive__item {
   position: relative;
+    --b: .1em;
+    --d: 20px;
+    --_s: calc(var(--d) + var(--b));
+    border: solid #0000;
+    border-width: var(--b) var(--b) var(--_s) var(--_s);
+    background: conic-gradient(at left var(--d) bottom var(--d), #0000 90deg, rgb(255 255 255 /0.3) 0 225deg,rgb(255 255 255 /0.6) 0) border-box, conic-gradient(at left var(--_s) bottom var(--_s), #0000 90deg,var(--c) 0) 0 100%/calc(100% - var(--b)) calc(100% - var(--b)) border-box;
+    transform: translate(calc(var(--d)/-1),var(--d));
+    clip-path: polygon( var(--d) 0%, var(--d) 0%, 100% 0%, 100% calc(100% - var(--d)), 100% calc(100% - var(--d)), var(--d) calc(100% - var(--d)) );
+    transition: 0.5s;
 
   a {
     position: relative;
@@ -29,6 +38,11 @@
   a[rel="permalink"] {
     position: static;
   }
+}
+.archive__item:hover {
+transform: translate(0,0);
+    clip-path: polygon( 0% var(--d), var(--d) 0%, 100% 0%, 100% calc(100% - var(--d)), calc(100% - var(--d)) 100%, 0% 100% );
+    --c: #1095c1;
 }
 
 .archive__subtitle {
@@ -40,6 +54,7 @@
 
   + .list__item .archive__item-title {
     margin-top: 0.5em;
+    padding: 5px;
   }
 }
 
@@ -75,6 +90,7 @@
 .archive__item-excerpt {
   margin-top: 0;
   font-size: $type-size-6;
+  padding: 5px;
 
   & + p {
     text-indent: 0;
