--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -10,8 +10,8 @@
   {% assign title = post.title %}
 {% endif %}
 
-<div class="{{ include.type | default: 'list' }}__item">
-   <article class="archive__item" href="{{ post.url | relative_url }}" itemscope itemtype="https://schema.org/CreativeWork">
+<a href="{{ post.url | relative_url }}"><div class="{{ include.type | default: 'list' }}__item">
+   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
         <img src="{{ teaser | relative_url }}" alt="">
