--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -10,7 +10,7 @@
   {% assign title = post.title %}
 {% endif %}
 
-<a href="{{ post.url | relative_url }}"><div class="{{ include.type | default: 'list' }}__item">
+<div class="{{ include.type | default: 'list' }}__item">
    <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
@@ -26,5 +26,5 @@
     </h2>
     {% include page__meta.html type=include.type %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
-  </article></a>
+  </article>
 </div>
