--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -31,7 +31,7 @@ article.archive__item {
   }
 }
 
-article.archive__item {
+.archive__item {
   --b: .1em;
   --d: 20px;
   --_s: calc(var(--d) + var(--b));
