--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,12 +113,13 @@
   h1, h2, h3, h4, h5, h6 {
     margin: 2em 0 0.5em;
     line-height: 1.2;
-    font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+    font-family: "Rubik", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
     font-weight: bold
   }
   h1 {
     margin-top: 0;
-    font-size: 1.563em
+    font-size: 1.563em;
+    color: #212427;
   }
   h2 {
     font-size: 1.25em
@@ -949,10 +950,53 @@
     margin-right: auto;
     clear: both;
     padding: 1em 1em 1em;
-    font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+    font-family: "Rubik", ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
     font-weight: 700;
-    text-transform: uppercase
   }
+
+  #title-dot {
+    color: #ffd800;
+  }
+
+  a.site-title {
+    font-size: 2rem;
+  }
+
+  .site-title {
+    display: block;
+    width: 100%;
+    position: relative;
+    white-space: nowrap;
+    clear: both;
+}
+
+.site-title a {
+  position: relative;
+  display: block;
+}
+
+.site-title::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffd800;
+  transform-origin: bottom right;
+  transition: transform 0.45s ease-out;
+
+}
+
+.site-title:hover::after {
+   
+    background: #ffd800;
+    transform: scaleX(1);
+    transform-origin: bottom left;
+    }
+
+    
   .masthead__inner-wrap:after {
     content: " ";
     display: block;
@@ -976,7 +1020,7 @@
   }
   @media (min-width: 64em) {
     .masthead__menu {
-      padding-left: 21.18644%
+      padding-left: 20%;
     }
   }
   .masthead__menu ul {
@@ -1158,14 +1202,19 @@
   }
   .greedy-nav a {
     display: block;
-    margin: 0 1rem;
-    padding: 0.5rem 0;
-    color: #7a8288;
+    margin: 0;
+    padding: 0;
+    color: #212427;
     text-decoration: none
   }
   .greedy-nav a:hover {
-    color: #5c6266
+    color: #212427
   }
+
+  li.masthead__menu-item {
+    padding-right: 1.5rem;
+}
+
   .greedy-nav button {
     position: absolute;
     height: 100%;
@@ -1201,14 +1250,20 @@
     position: absolute;
     bottom: 0;
     height: 4px;
-    background: #bdc1c4;
+    background: #ffd800;
     width: 0;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out
+    transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
   }
+
   .greedy-nav .visible-links a:hover:before {
-    width: 100%
+    width: 100%;
+    background: #ffd800;
+    transform: scaleX(1);
+    transform-origin: bottom left;
   }
+
   .greedy-nav .hidden-links {
     position: absolute;
     top: 100%;
@@ -2180,7 +2235,7 @@
       width: 80%;
       float: right;
       margin-right: 0;
-      padding-left: 4.23729%
+      padding-left: 0;
     }
   }
   .archive a {
