--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -47,7 +47,7 @@ article.archive__item {
 .archive__item:hover {
 transform: translate(0,0);
     clip-path: polygon( 0% var(--d), var(--d) 0%, 100% 0%, 100% calc(100% - var(--d)), calc(100% - var(--d)) 100%, 0% 100% );
-    --c: #1095c1;
+    --c: #ffd800;
 }
 
 .archive__subtitle {
