--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5524,7 +5524,7 @@
   .archive__item:hover {
     transform: translate(0, 0);
     clip-path: polygon(0% var(--d), var(--d) 0%, 100% 0%, 100% calc(100% - var(--d)), calc(100% - var(--d)) 100%, 0% 100%);
-    --c: #1095c1;
+    --c: #ffd800;
 }
 
 .grid__item .archive__item-title {
